methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:9: error: value baisseBrosse is not a member of Unit
possible cause: maybe a semicolon is missing before `value baisseBrosse'?
  } baisseBrosse();leveBrosse();gauche();avance();avance();gauche()
    ^